--- a/wwwroot/css/main.css
+++ b/wwwroot/css/main.css
@@ -1,4 +1,11 @@
+/* ESPACIO */
+.mt-comun {
+  margin-top: 2rem !important;
+}
+
 /* COLORS */
+/* https://encycolorpedia.com/b03648 */
+
 /* TEXT */
 .text-granate {
   color: #b03648 !important;
@@ -64,8 +71,16 @@
   background-color: #039be5 !important;
 }
 
+.bg-cielo-light {
+  background-color: #26b6fc !important;
+}
+
 .bg-verdin {
   background-color: #6ea100 !important;
+}
+
+.bg-verdin-light {
+  background-color: #8ac900 !important;
 }
 
 .bg-lima {
@@ -74,6 +89,10 @@
 
 .bg-maiz {
   background-color: #ffce00 !important;
+}
+
+.bg-maiz-light {
+  background-color: #ffda40 !important;
 }
 
 .bg-tomate {
@@ -90,5 +109,5 @@
 
 /* CARD */
 .card-header-height {
-  height: 150px !important;
+  height: 140px !important;
 }
