Se agrega display 5.

--- a/wwwroot/css/main.css
+++ b/wwwroot/css/main.css
@@ -3,6 +3,12 @@
   font-size: 1rem;
 }
 
+.display-5 {
+  font-size: 3rem;
+  font-weight: 300;
+  line-height: 1.2;
+}
+
 /* ESPACIO */
 .mt-comun {
   margin-top: 2rem !important;
